# code-levels-railway

./: .dockerignore  .env.docker  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  manage.py  package.json  pnpm-lock.yaml  pyproject.toml  railway.json  requirements.txt
api/: admin.py  models.py  serializers.py  signals.py  telegram_api.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_userprofile_is_token_verified.py  0003_userprofile_telegram_first_name.py  0004_userprofile_language.py  0005_alter_userprofile_interface_language.py  0006_userprofile_wakatime_api_key.py  0007_remove_userprofile_interface_language.py  0008_userprofile_paid_plan.py  0009_userprofile_assign_free_plan.py
api/models/: UserProfile.py
api/repositories/: UserProfileRepository.py  UserRepository.py
api/services/: UserProfileService.py
bash/: create_pg_user.sh  drop_user.sh  setup_postgres.sh  website_admin.sh
bash/deploy/: pre-deploy.sh  start.sh
code_levels/: asgi.py  urls.py  wsgi.py
code_levels/settings/: base.py  dev.py  drf.py  prod.py
content/projects/: webdev.md
content/security/: common-web-vulnerabilities.md
docs/ai/: openai-translations.md  translation-record.md
docs/mvp/: admin.md  ads.md  concept.md  features.md  hierarchy.md  ideas.md  models.md  monetization.md  next-steps.md  payment.md  plan.md  plans.md  project-localization-strategy.md  requirements.md  security.md  subscription-levels-plan.md  sync.md  tests.md  todo.md  users.md  views.md  website.md
platform_web/: admin.py  apps.py  context_processors.py  decorators.py  middleware.py  permission.py  sitemaps.py  translation.py  urls.py
platform_web/admin/: __init__.py  app.py  base.py
platform_web/config/: pages.py  web_config.py
platform_web/data/: transliteration.py
platform_web/forms/: __init__.py  auth_forms.py  custom_signup_form.py  custom_social_account_adapter.py  custom_social_signup_form.py  forms.py
platform_web/migrations/: 0001_initial.py  0002_programminglanguage.py  0003_developmentstage_difficulty_skill_project_and_more.py  0003_seed_frameworks.py  0004_alter_framework_name.py  0004_remove_project_description_remove_project_icon_and_more.py  0006_alter_project_slug.py  (+72 more)
(+197 files in other folders)
