[project]
name = "code-levels-railway"
version = "0.1.0"
description = ""
authors = [
    {name = "Ca-tt",email = "damir96.lukyanenko@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django (>=6.0.1,<7.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "psycopg2 (>=2.9.11,<3.0.0)",
    "whitenoise (>=6.11.0,<7.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pillow (>=12.1.0,<13.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "django-browser-reload (>=1.21.0,<2.0.0)",
    "django-allauth (>=65.14.0,<66.0.0)",
    "django-jazzmin (>=3.0.1,<4.0.0)",
    "colorlog (>=6.10.1,<7.0.0)",
    "dj-database-url (>=3.1.0,<4.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "cryptography (>=46.0.3,<47.0.0)",
    "uvicorn (>=0.40.0,<0.41.0)"
]

[tool.poetry]
package-mode=false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
